# pillio

./: .clang-format  .dockerignore  .env.example  .gitignore  .replit  CMakeLists.txt  CMakePresets.json  Dockerfile  railway.json  replit.nix  start.sh  vcpkg.json
bot/: bot.py  requirements.txt
data/: family.json
src/: analytics.cpp  analytics.hpp  checker.cpp  checker.hpp  family.cpp  family.hpp  main.cpp  models.hpp  storage.cpp  storage.hpp  tracker.cpp  tracker.hpp
static/: index.html
tests/: tests.cpp
